--- a/application/app/assets/scss/_sidebar.scss
+++ b/application/app/assets/scss/_sidebar.scss
@@ -69,7 +69,7 @@
   .animate-enter,
    .animate-leave
    {
-    @include transition(all 400ms);
+    -webkit-transition: all 400ms;
      position: relative;
    }
 
