--- a/application/app/assets/scss/_multi_device.scss
+++ b/application/app/assets/scss/_multi_device.scss
@@ -1,5 +1,9 @@
 .multi-device {
   .ips li {
     margin-bottom: 8px;
+    code {
+      -webkit-user-select: auto;
+      cursor: text;
+    }
   }
 }
