--- a/application/app/templates/fileTypes/coffee.html
+++ b/application/app/templates/fileTypes/coffee.html
@@ -7,3 +7,8 @@
     <input type="checkbox" ng-model="selectedFile.config.uglify">
     <span class="label-desc">Uglify</span>
 </label>
+
+<label ng-if="selectedFile.config.uglify">
+    <input type="checkbox" ng-model="selectedFile.config.mangle">
+    <span class="label-desc">Mangle Variable Names</span>
+</label>
