--- a/docs/templates/index.jade
+++ b/docs/templates/index.jade
@@ -44,6 +44,8 @@ html
 						li
 							a(href='slim.html') Using Slim
 						li
+							a(href='livescript.html') Using LiveScript
+						li
 							a(href='keyboard.html') Keyboard Shortcuts
 						li
 							<div div id="bsap_1286936" class="bsarocks bsap_70757695faf54d2f2053aaf9e63c7162"></div>
