--- a/application/app/templates/about.html
+++ b/application/app/templates/about.html
@@ -55,6 +55,6 @@
     </div>
 
     <div class="modal-footer">
-        <a href="#" class="btn btn-primary" data-dismiss="modal">Close</a>
+        <a href="#" class="prepros-button" data-dismiss="modal">Close</a>
     </div>
 </div>
