--- a/application/app/templates/title-bar.html
+++ b/application/app/templates/title-bar.html
@@ -2,13 +2,22 @@
     <div class="controls">
         <a ng-click="goWebsite()" class="icomoon-gift highlight" tooltip="A New Version Of Prepros is Available" data-placement="bottom" ng-show="appUpdate"></a>
         <a ng-href="#/home" class="icomoon-home" tooltip="Go to home" data-placement="bottom"></a>
-        <a class="love icomoon-heart-2" tooltip="Donate to make Prepros more awesome :-)" data-placement="bottom" ng-click="supportAuthor()"></a>
-        <a class="about icomoon-info " tooltip="About Prepros" data-placement="bottom" show-modal-on-click="#aboutModal"></a>
-        <a class="about icomoon-mobile-2 " tooltip="Multi Device Live Refresh" data-placement="bottom" show-modal-on-click="#multiDevice"></a>
+        <a class="icomoon-plus" tooltip="Add new project" ng-click="addProject()" data-placement="bottom" ></a>
+        <a class="icomoon-mobile-2 " tooltip="Multi Device Live Refresh" data-placement="bottom" show-modal-on-click="#multiDevice"></a>
         <a ng-href="#/log" class="log icomoon-copy-2" tooltip="App Log" data-placement="bottom"></a>
-        <a class="options icomoon-cog " tooltip="App Options" data-placement="bottom" ng-click="openOptionsWindow()"></a>
-        <a class="to-tray icomoon-arrow-down-right-3" tooltip="Minimize to Tray" data-placement="bottom" ng-click="toTray()"></a>
-        <a class="minimize-app icomoon-minus" tooltip="Minimize" data-placement="bottom" ng-click="minimize()"></a>
-        <a class="close-app icomoon-close" tooltip="Close" data-placement="left" ng-click="close()"></a>
+
+        <div class="dropdown">
+            <i class="icomoon-menu-2" id="dd" data-toggle="dropdown"></i>
+            <ul class="dropdown-menu pull-right" role="menu" aria-labelledby="dd">
+                <li><a ng-click="openOptionsWindow()"><i class="icomoon-cog "></i> Prepros Options</a></li>
+                <li><a show-modal-on-click="#aboutModal"><i class="icomoon-info"></i>About Prepros</a></li>
+                <li class="divider"></li>
+                <li><a ng-click="supportAuthor()"><i class="icomoon-heart-2"></i> Donate to Prepros</a></li>
+            </ul>
+        </div>
+
+        <a class="icomoon-arrow-down-right-3" tooltip="Minimize to Tray" data-placement="bottom" ng-click="toTray()"></a>
+        <a class="icomoon-minus" tooltip="Minimize" data-placement="bottom" ng-click="minimize()"></a>
+        <a class="icomoon-close" tooltip="Close" data-placement="left" ng-click="close()"></a>
     </div>
 </div>
