--- a/application/app/assets/scss/style.scss
+++ b/application/app/assets/scss/style.scss
@@ -9,7 +9,8 @@
 @import 'files';
 @import 'loading';
 @import 'log';
-@import 'multi_device';
+@import 'multi-device';
+@import 'optim-image';
 
 
 .wrapper {
