--- a/application/app/assets/scss/_sidebar.scss
+++ b/application/app/assets/scss/_sidebar.scss
@@ -42,17 +42,18 @@
     width: 180px;
     padding-top: 12px;
     position: relative;
-    div {
+    div, a {
+      display: inline-block;
       height: 30px;
       width: 30px;
       line-height: 30px;
       color: #a9a9a9;
-      display: inline-block;
       text-align: center;
       -webkit-transform: scale(0, 0);
       -webkit-transition: -webkit-transform .3s;
       &:hover {
         color: #fff;
+        text-decoration: none;
       }
     }
 
@@ -60,7 +61,7 @@
       -webkit-transform: scale(1, 1);
     }
 
-    &.show div {
+    &.show div, &.show a {
       -webkit-transform: scale(1, 1);
       -webkit-transition: -webkit-transform .2s;
     }
