--- a/application/app/templates/optim-image.html
+++ b/application/app/templates/optim-image.html
@@ -1,14 +1,11 @@
-<div class="modal hide fade optim-image" id="optimImage" ng-controller="OptimImageCtrl">
+<div class="optim-image">
+    <div  ng-repeat="image in projectImages" class="img">
 
-    <div class="modal-header">
-        <a class="close" data-dismiss="modal">&times;</a>
-        <h3>Optimize Images</h3>
-    </div>
+        <div class="thumb">{{ image.type }}</div>{{ image.shortPath | prettyPath | shorten }}
 
-    <div class="modal-body">
-    </div>
-
-    <div class="modal-footer">
-        <a href="#" class="prepros-button" data-dismiss="modal">Close</a>
+        <button ng-click="optimize($event, image.path)" class="prepros-button">
+            <i class="icomoon-spinner"></i>
+            <span>Optimize</span>
+        </button>
     </div>
 </div>
