--- a/application/app/templates/sidebar.html
+++ b/application/app/templates/sidebar.html
@@ -7,11 +7,11 @@
     </ul>
 
     <div class="controls" ng-class="{'show' : selectedProject.id}">
-        <div class="refresh icomoon-spinner-2" tooltip="Refresh Files" ng-click="refreshFiles()"></div>
-        <div class="options icomoon-cog" tooltip="Project Options" show-modal-on-click="#optionsModal"></div>
-        <div class="options icomoon-images" tooltip="Optimize Images" show-modal-on-click="#optimImage"></div>
-        <div class="open icomoon-globe" tooltip="Open project live url" ng-click="openLiveUrl()"></div>
-        <div class="remove icomoon-remove" tooltip="Remove project" ng-click="removeProject()"></div>
+        <div class="icomoon-spinner-2" tooltip="Refresh Files" ng-click="refreshFiles()"></div>
+        <div class="icomoon-cog" tooltip="Project Options" show-modal-on-click="#optionsModal"></div>
+        <a class="icomoon-images" tooltip="Optimize Images" ng-href="#optim/{{ selectedProject.id }}"></a>
+        <div class="icomoon-globe" tooltip="Open project live url" ng-click="openLiveUrl()"></div>
+        <div class="icomoon-remove" tooltip="Remove project" ng-click="removeProject()"></div>
     </div>
 
 </div>
