exclude mode modules by default

--- a/application/app/assets/scss/_optim-image.scss
+++ b/application/app/assets/scss/_optim-image.scss
@@ -42,7 +42,7 @@
       }
     }
     .thumb {
-      background: #53b53b;
+      background: #f8c137;
       left: 7px;
       top: 7px;
       position: absolute;
