--- a/application/app/templates/notification.html
+++ b/application/app/templates/notification.html
@@ -2,9 +2,9 @@
 <html ng-app>
 <head>
     <title>Notification</title>
-    <script src="../vendor/jquery.min.js"></script>
-    <script src="../vendor/underscore.min.js"></script>
-    <script src="../vendor/angular.js"></script>
+    <script src="../js/vendor/jquery.min.js"></script>
+    <script src="../js/vendor/underscore.min.js"></script>
+    <script src="../js/vendor/angular.js"></script>
     <link href="../assets/css/style.css" rel="stylesheet">
     <script>
         function NotificationCtrl($scope){
