--- a/application/app/templates/options.html
+++ b/application/app/templates/options.html
@@ -4,9 +4,9 @@
 <head>
     <title>Prepros Options</title>
 
-    <script src="../vendor/jquery.min.js"></script>
-    <script src="../vendor/angular.js"></script>
-    <script src="../vendor/bootstrap.min.js"></script>
+    <script src="../js/vendor/jquery.min.js"></script>
+    <script src="../js/vendor/angular.js"></script>
+    <script src="../js/vendor/bootstrap.min.js"></script>
     <link href="../assets/css/style.css" rel="stylesheet">
     <script>
 
@@ -68,7 +68,7 @@
     </script>
 
     <!--Bootstrap Tabs -->
-    <script src="../scripts/directives/tabs.js"></script>
+    <script src="../js/app/directives/tabs.js"></script>
 
 </head>
 <body ng-controller="OptionsCtrl" style="padding-top: 20px; padding-left: 20px;">
