--- a/application/app/templates/options.html
+++ b/application/app/templates/options.html
@@ -75,7 +75,7 @@
 
 <ul class="nav nav-tabs">
     <li class="active"><a href="#general" data-toggle="tab">General</a></li>
-    <li><a href="#folders" data-toggle="tab">Folders</a></li>
+    <li><a href="#folders" data-toggle="tab">Output Folders</a></li>
     <li><a href="#file-types" data-toggle="tab">File Types</a></li>
     <li><a href="#advanced" data-toggle="tab">Advanced</a></li>
 </ul>
