--- a/application/app/templates/project-options.html
+++ b/application/app/templates/project-options.html
@@ -32,7 +32,7 @@
                 </label>
             </div>
 
-            <div data-title="Directories">
+            <div data-title="Output Folders">
 
                 <label>
                     <span class="label-desc label-block">CSS Folder</span>
