--- a/application/app/templates/options.html
+++ b/application/app/templates/options.html
@@ -100,7 +100,7 @@
             <input type="text" ng-model="userConfig.filterPatterns">
         </label>
         <label class="label-block">
-            <button class="btn" ng-click="clearCache($event)">Clear Prepros Cache</button>
+            <button class="prepros-button" ng-click="clearCache($event)">Clear Prepros Cache</button>
         </label>
     </div>
 
