--- a/application/app/assets/scss/_files.scss
+++ b/application/app/assets/scss/_files.scss
@@ -1,14 +1,14 @@
 $scss: #c02ec9;
 $sass: #774F38;
-$less: #0398e7;
-$stylus: #4fc974;
-$jade: #FA6900;
-$coffee: #93a318;
-$js: #b66ff4;
-$haml: #036564;
-$md: #b24c32;
-$slim: #45ADA8;
-$livescript: #369bd7;
+$less: #E97F02;
+$stylus: #F8CA00;
+$jade: #8A9B0F;
+$coffee: #036564;
+$js: #ECD078;
+$haml: #556270;
+$md: #7A6A53;
+$slim: #00A0B0;
+$livescript: #99173C;
 
 $duration : .5s;
 
