--- a/docs/templates/index.jade
+++ b/docs/templates/index.jade
@@ -28,6 +28,8 @@ html
 						li
 							a(href='sass-compass.html') Using Sass &amp; Compass
 						li
+							a(href='image-optimization.html') Image Optimization
+						li
 							a(href='js-concat-minify.html') Js Conatenation and Minification
 						li
 							a(href='less.html') Using LESS
