--- a/application/app/assets/scss/_options-window.scss
+++ b/application/app/assets/scss/_options-window.scss
@@ -16,7 +16,8 @@
   }
 
   .nav-tabs>li {
-    border: 0px solid #666;
+    border-left: 5px solid #fff;
+    padding-left: 15px;
   }
 
   .nav-tabs>li:hover {
