--- a/application/app/templates/options.html
+++ b/application/app/templates/options.html
@@ -159,9 +159,9 @@
             </label>
         </div>
 
-        <div data-title="Less">
+        <div data-title="LESS">
 
-            <h4 class="option-title">Less</h4>
+            <h4 class="option-title">LESS</h4>
 
             <label>
                 <input type="checkbox" ng-model="userConfig.less.autoCompile">
