--- a/docs/templates/index.jade
+++ b/docs/templates/index.jade
@@ -1,75 +1,74 @@
-!!! 5
+doctype 5
 html
 	include jade/head.jade
-
-	body
+body
+	header
 		include jade/nav.jade
 
-		.container.docs
+		.docs.row
+			
+			.sidebar.small-12.large-4.columns
 
-			.row
-				.sidebar.span3
+				ul.topics
+					li
+						a(href='index.html') Getting Started
+					li
+						a(href='installing.html') Installing
+					li
+						a(href='projects.html') Projects
+					li
+						a(href='files.html') Files
+					li
+						a(href='config.html') Configuring Prepros
+					li
+						a(href='live-refresh.html') Live Refresh
+					li
+						a(href='multi-device-live-refresh.html') Multi Device Live Refresh
+					li
+						a(href='sass-compass.html') Using Sass &amp; Compass
+					li
+						a(href='image-optimization.html') Image Optimization
+					li
+						a(href='js-concat-minify.html') Js Conatenation and Minification
+					li
+						a(href='less.html') Using LESS
+					li
+						a(href='stylus.html') Using Stylus
+					li
+						a(href='jade.html') Using Jade
+					li
+						a(href='coffee-script.html') Using CoffeeScript
+					li
+						a(href='haml.html') Using Haml
+					li
+						a(href='markdown.html') Using Markdown
+					li
+						a(href='slim.html') Using Slim
+					li
+						a(href='livescript.html') Using LiveScript
+					li
+						a(href='keyboard.html') Keyboard Shortcuts
+					li
+						<div div id="bsap_1286936" class="bsarocks bsap_70757695faf54d2f2053aaf9e63c7162"></div>
 
-					ul.topics
-						li
-							a(href='index.html') Getting Started
-						li
-							a(href='installing.html') Installing
-						li
-							a(href='projects.html') Projects
-						li
-							a(href='files.html') Files
-						li
-							a(href='config.html') Configuring Prepros
-						li
-							a(href='live-refresh.html') Live Refresh
-						li
-							a(href='multi-device-live-refresh.html') Multi Device Live Refresh
-						li
-							a(href='sass-compass.html') Using Sass &amp; Compass
-						li
-							a(href='image-optimization.html') Image Optimization
-						li
-							a(href='js-concat-minify.html') Js Conatenation and Minification
-						li
-							a(href='less.html') Using LESS
-						li
-							a(href='stylus.html') Using Stylus
-						li
-							a(href='jade.html') Using Jade
-						li
-							a(href='coffee-script.html') Using CoffeeScript
-						li
-							a(href='haml.html') Using Haml
-						li
-							a(href='markdown.html') Using Markdown
-						li
-							a(href='slim.html') Using Slim
-						li
-							a(href='livescript.html') Using LiveScript
-						li
-							a(href='keyboard.html') Keyboard Shortcuts
-						li
-							<div div id="bsap_1286936" class="bsarocks bsap_70757695faf54d2f2053aaf9e63c7162"></div>
+			.docs-content.small-12.large-8.columns
 
-				.docs-content.span9
-
-					h1=page.title
-						
-					div
-						!= page.html
-					div
-						#disqus_thread
-							script.
-								/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-								var disqus_shortname = 'alphapixelscom'; // required: replace example with your forum shortname
-								/* * * DON'T EDIT BELOW THIS LINE * * */
-								(function() {
-									var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-									dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-									(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-									})();
-							<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-							<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+				h1=page.title
+					
+				div
+					!= page.html
+				div
+					#disqus_thread
+						script.
+							/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+							var disqus_shortname = 'alphapixelscom'; // required: replace example with your forum shortname
+							/* * * DON'T EDIT BELOW THIS LINE * * */
+							(function() {
+								var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+								dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+								(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+								})();
+						<noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+						<a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 
 	include jade/foot.jade
