--- a/docs/templates/jade/foot.jade
+++ b/docs/templates/jade/foot.jade
@@ -1,27 +1,36 @@
 footer
-	.container
-		.row
-			.span4
-				h3 Contact Me
-				span.contact-item
-					i.icon-mail
-					<a href="mailto:sbshpthk@gmail.com">sbshpthk@gmail.com</a>
-				span.contact-item
-					i.icon-twitter
-					a(href='http://twitter.com/sbspk') @sbspk
-				span.contact-item
-					i.icon-dribbble
-					a(href='http://dribbble.com/subash') @subash
-				span.contact-item
-					i.icon-github
-					a(href='http://github.com/sbspk') @sbspk
-			.span8
-				h3 Say Thanks
-				h4 Please donate so I can spend more time making Prepros awesome.
-				p(style="margin-top: 20px;")
-					<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank" style="display: inline-block; position: relative; top: 5px;">
-					<input type="hidden" name="cmd" value="_s-xclick">
-					<input type="hidden" name="hosted_button_id" value="EGLVFC4YQK7WL">
-					<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!" onClick="ga('send', 'event', 'Donate Bottom');">
-					<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
-					</form>
+	.row
+		.small-6.large-3.columns
+			h3 Contact Me
+			span.contact-item
+				i.icon-mail
+				a(href='mailto:subash@subash.me') subash@subash.me
+			span.contact-item
+				i.icon-twitter
+				a(href='http://twitter.com/sbspk') @sbspk
+			span.contact-item
+				i.icon-dribbble
+				a(href='http://dribbble.com/subash') @subash
+			span.contact-item
+				i.icon-github
+				a(href='http://github.com/sbspk') @sbspk
+
+		.small-6.large-3.columns
+			h3 Thanks to
+			span.contact-item
+				a(href="https://github.com/mattclements") Matt Clements
+			span.contact-item
+				a(href="http://github.com/zhchbin") Chaobin Zhang
+			span.contact-item
+				a(href="http://github.com/rogerwang/node-webkit") Node-Webkit Project
+			span.contact-item
+				a(href="https://github.com/sbspk/Prepros/graphs/contributors") All Contributors
+
+		.small-12.large-6.columns
+			h3 Say Thanks
+			p Please donate so I can spend more time making Prepros awesome.
+			p(style="margin-top: 20px;")
+				form(action="https://www.paypal.com/cgi-bin/webscr")(method="post")(target="_blank")
+				input(type="hidden")(name="cmd")(value="_s-xclick")
+				input(type="hidden")(name="hosted_button_id")(value="EGLVFC4YQK7WL")
+				input(type="image")(src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif")(name="submit")(alt="PayPal - The safer, easier way to pay online!")(onClick="ga('send', 'event', 'Donate Top');")
