--- a/docs/templates/jade/nav.jade
+++ b/docs/templates/jade/nav.jade
@@ -6,6 +6,7 @@ nav
 			a(href="/prepros/docs/") Docs
 			a(href="/prepros/faq.html") FAQ
 			a(href="/prepros/changelog.html") Changelog
+			a(href="http://github.com/sbspk/Prepros") Prepros on Github
 		.paypal-donate.large-4.small-12.columns
 			form(action="https://www.paypal.com/cgi-bin/webscr")(method="post")(target="_blank")
 				input(type="hidden")(name="cmd")(value="_s-xclick")
