Revert "fixed unintended popup"
This reverts commit 7a7dfdff60fd02166aca9968936b5738fc7f0a2c.

--- a/application/app/templates/notification.html
+++ b/application/app/templates/notification.html
@@ -43,6 +43,7 @@
 
                 var nWin = require('nw.gui').Window.get();
 
+
                 if(typeof nWin.showInactive === 'function') {
 
                     nWin.showInactive();
@@ -50,6 +51,7 @@
                 } else {
 
                     nWin.show();
+                    nWin.blur();
                 }
             });
         }
