--- a/application/app/templates/options.html
+++ b/application/app/templates/options.html
@@ -54,7 +54,7 @@
 
             $scope.validRuby = function() {
 
-                return !(process.platform == 'win32' && $scope.userConfig.customRuby.path == '');
+                return !($scope.userConfig.customRuby.path == '');
             };
 
             $scope.process = global.process;
@@ -373,7 +373,7 @@
             </label>
 
             <div ng-if="userConfig.customRuby.use">
-                <label ng-if="process.platform == 'win32'">
+                <label>
                     <span class="label-desc label-block">Path to custom ruby executable file</span>
                     <input type="text" ng-model="userConfig.customRuby.path">
                 </label>
