--- a/application/app/templates/files-list.html
+++ b/application/app/templates/files-list.html
@@ -14,18 +14,18 @@
             <div class="details clearfix">
 
                 <div class="name">
-                    <span tooltip="{{file.input}}">{{file.name}}</span>
+                    <span tooltip="{{file.input | fullPath: { basePath: selectedProject.path } }}">{{file.name}}</span>
                 </div>
 
                 <div class="input">
-                    <span>{{file.shortInput | prettyPath | shorten}}</span>
+                    <span>{{file.input | prettyPath | shorten}}</span>
                 </div>
 
                 <div>
                     <span ng-hide="file.config.compass && file.config.fullCompass"
                           class="output" tooltip="Click to change file output path"
                           ng-click="changeFileOutput($event, file.pid, file.id)">&rarr;
-                        {{file.output | interpolatePath : { config: selectedProject.config, relative: true, basePath: selectedProject.path } | prettyPath | shorten}}
+                        {{file.output | interpolatePath : { config: selectedProject.config} | prettyPath | shorten}}
                     </span>
                 </div>
 
