sass global line number option

--- a/application/app/templates/options.html
+++ b/application/app/templates/options.html
@@ -132,6 +132,12 @@
                 <input type="checkbox" ng-model="userConfig.sass.autoCompile">
                 <span class="label-desc">Auto Compile</span>
             </label>
+
+            <label>
+                <input type="checkbox" ng-model="userConfig.sass.lineNumbers">
+                <span class="label-desc">Line numbers</span>
+            </label>
+
             <label>
                 <input type="checkbox" ng-model="userConfig.sass.unixNewlines">
                 <span class="label-desc">Unix Newlines</span>
