--- a/application/app/templates/options.html
+++ b/application/app/templates/options.html
@@ -34,6 +34,10 @@
                 $scope.close();
             };
 
+            $scope.cancel = function () {
+                $scope.close();
+            };
+
 
         });
     </script>
@@ -375,8 +379,9 @@
     </div>
 
     <!-- Done -->
-    <button ng-click="save()" class="prepros-button" style="margin: 10px; position: absolute; bottom: 10px; right: 85px;;">Save Options</button>
-    <button ng-click="close()" class="prepros-button" style="margin: 10px; position: absolute; bottom: 10px; right: 10px;;">Cancel</button>
+    <button ng-click="close()" class="prepros-button" style="margin: 10px; position: absolute; bottom: 0; right: 60px;;">Cancel</button>
+    <button ng-click="save()" class="prepros-button" style="margin: 10px; position: absolute; bottom: 0; right: 0;">Save</button>
+
 
 </body>
 </html>
