added autoprefixer support #207

--- a/application/app/templates/fileTypes/sass.html
+++ b/application/app/templates/fileTypes/sass.html
@@ -24,6 +24,11 @@
 </label>
 
 <label>
+    <input type="checkbox" ng-model="selectedFile.config.autoprefixer">
+    <span class="label-desc">Auto Prefix CSS</span>
+</label>
+
+<label>
     <span class="label-desc label-block">Output Style</span>
     <select ng-model="selectedFile.config.outputStyle">
         <option value="compressed">Compressed</option>
