--- a/application/app/templates/fileTypes/scss.html
+++ b/application/app/templates/fileTypes/scss.html
@@ -22,7 +22,10 @@
     <input type="checkbox" ng-model="selectedFile.config.fullCompass">
     <span class="label-desc">Full Compass Support</span>
 </label>
-
+<label>
+    <input type="checkbox" ng-model="selectedFile.config.autoprefixer">
+    <span class="label-desc">Auto Prefix CSS</span>
+</label>
 <label>
     <span class="label-desc label-block">Output Style</span>
     <select ng-model="selectedFile.config.outputStyle">
