--- a/application/app/templates/fileTypes/stylus.html
+++ b/application/app/templates/fileTypes/stylus.html
@@ -12,3 +12,8 @@
     <input type="checkbox" ng-model="selectedFile.config.nib">
     <span class="label-desc">Use Nib</span>
 </label>
+
+<label>
+    <input type="checkbox" ng-model="selectedFile.config.autoprefixer">
+    <span class="label-desc">Auto Prefix CSS</span>
+</label>
