--- a/application/app/templates/fileTypes/less.html
+++ b/application/app/templates/fileTypes/less.html
@@ -17,3 +17,8 @@
     <input type="checkbox" ng-model="selectedFile.config.compress">
     <span class="label-desc">Compress CSS</span>
 </label>
+
+<label>
+    <input type="checkbox" ng-model="selectedFile.config.autoprefixer">
+    <span class="label-desc">Auto Prefix CSS</span>
+</label>
