--- a/application/app/templates/options.html
+++ b/application/app/templates/options.html
@@ -71,6 +71,11 @@
                 <span class="muted label-block">Please enter comma separated list</span>
                 <input type="text" ng-model="userConfig.filterPatterns">
             </label>
+            <label>
+                <span class="label-desc label-block">Autoprefixer Browsers</span>
+                <span class="muted label-block">Please enter comma separated list.</span>
+                <input type="text" ng-model="userConfig.autoprefixerBrowsers" placeholder="Default Browsers">
+            </label>
         </div>
 
         <div data-title="Folders">
