--- a/application/app/templates/project-options.html
+++ b/application/app/templates/project-options.html
@@ -58,9 +58,13 @@
                 <label>
                     <span class="label-desc label-block">Filter Patterns</span>
                     <span class="muted label-block">Please enter comma separated list</span>
-                    <input type="text" ng-model="selectedProject.config.filterPatterns" class="span5">
+                    <input type="text" ng-model="selectedProject.config.filterPatterns" class="span5" placeholder="Use global filters only.">
                 </label>
-
+                <label>
+                    <span class="label-desc label-block">Autoprefixer Browsers</span>
+                    <span class="muted label-block">Please enter comma separated list</span>
+                    <input type="text" ng-model="selectedProject.config.autoprefixerBrowsers" class="span5" placeholder="Default Browsers">
+                </label>
             </div>
         </div>
     </div>
