--- a/docs/templates/jade/nav.jade
+++ b/docs/templates/jade/nav.jade
@@ -1,7 +1,9 @@
+div#top-bar Using Prepros? Sponsor/Donate for the next version and get the benefits. <a href="/prepros/sponsor.html">Learn more</a>
 nav
 	.row
 		.large-8.small-12.columns
 			a(href="/prepros") Home
+			a(href="/prepros/sponsor.html") Sponsor
 			a(href="/prepros/#download") Download
 			a(href="/prepros/docs/") Docs
 			a(href="/prepros/faq.html") FAQ
