added ycssmin and prevent about window from overflowing

--- a/application/app/assets/scss/style.scss
+++ b/application/app/assets/scss/style.scss
@@ -36,3 +36,10 @@
   margin-left: 0;
   margin-bottom: 0;
 }
+
+#aboutModal {
+  .tab-content {
+    max-height: 250px;
+    overflow: auto;
+  }
+}
