--- a/application/app/templates/options.html
+++ b/application/app/templates/options.html
@@ -74,7 +74,11 @@
             <label>
                 <span class="label-desc label-block">Autoprefixer Browsers</span>
                 <span class="muted label-block">Please enter comma separated list.</span>
-                <input type="text" ng-model="userConfig.autoprefixerBrowsers" placeholder="Default Browsers">
+                <input type="text" ng-model="userConfig.autoprefixerBrowsers" placeholder="A value is required">
+            </label>
+            <label>
+                <span class="label-desc label-block">Live Refresh Delay in milliseconds</span>
+                <input type="text" ng-model="userConfig.liveRefreshDelay" placeholder="Default Browsers">
             </label>
         </div>
 
