vanilla refresh and option to enable faster file watcher

--- a/application/app/templates/options.html
+++ b/application/app/templates/options.html
@@ -392,6 +392,14 @@
                     </label>
                 </div>
             </div>
+
+            <label>
+                <input type="checkbox" ng-model="userConfig.experimentalFileWatcher">
+                <span class="label-desc">Experimental File Watcher</span>
+                <span class="muted label-block">This will improve performance and battery life but it's experimental.
+                    <br>Make sure that you remove folder from project before deleting that.</span>
+            </label>
+
             <div class="alert alert-danger" style="width: 335px;">
                 <i class="icomoon-info"></i> These settings might hurt, Use with caution !
             </div>
