--- a/application/app/templates/options.html
+++ b/application/app/templates/options.html
@@ -397,12 +397,8 @@
                 <input type="checkbox" ng-model="userConfig.experimentalFileWatcher">
                 <span class="label-desc">Experimental File Watcher</span>
                 <span class="muted label-block">This will improve performance and battery life but it's experimental.
-                    <br>Make sure that you remove folder from project before deleting that.</span>
+                    <br>Make sure that you remove project from Prepros before deleting project folder from file system.</span>
             </label>
-
-            <div class="alert alert-danger" style="width: 335px;">
-                <i class="icomoon-info"></i> These settings might hurt, Use with caution !
-            </div>
         </div>
 
     </div>
