--- a/application/app/templates/options.html
+++ b/application/app/templates/options.html
@@ -395,9 +395,8 @@
 
             <label>
                 <input type="checkbox" ng-model="userConfig.experimentalFileWatcher">
-                <span class="label-desc">Experimental File Watcher</span>
-                <span class="muted label-block">This will improve performance and battery life but it's experimental.
-                    <br>Make sure that you remove project from Prepros before deleting project folder from file system.</span>
+                <span class="label-desc"> Enable Faster Event Based File Watcher</span>
+                <div class="alert alert-info" style="margin-top: 10px" ng-if="userConfig.experimentalFileWatcher">Experimental file watcher improves performance and battery life. Make sure that you remove project from Prepros before deleting project folder from file system. You can disable it if you are having any issues.</div>
             </label>
         </div>
 
